# raytracer_cpp

./: Makefile.am  README.md  aclocal.m4  config.h  configure.ac
cl/: raytracer.cl
src/: camera.hpp  image.cpp  image.hpp  ray.hpp  raytracer.cpp  raytracer_cl.cpp  utils.hpp  vector.cpp  vector.hpp
src/material/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
src/shape/: hitable.hpp  shape_list.cpp  shape_list.hpp  sphere.cpp  sphere.hpp
